<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_purple">

    <LinearLayout
        android:id="@+id/caseFilmInfo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="20dp"
        android:background="@color/russian_violet"
        android:orientation="vertical"
       >
        <LinearLayout
            android:id="@+id/headInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
            android:id="@+id/textFilmNameInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/text_film_name"
            android:textColor="@color/saffron"
            android:textSize="@dimen/text_size_36dp" />

            <ImageView
                android:id="@+id/imageFavoriteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/ic_not_favorite"/>

    </LinearLayout>

        <ImageView
            android:id="@+id/imageFilmPosterInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:background="@drawable/ic_poster" />

        <TextView
            android:id="@+id/textFilmGenreInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:text="@string/text_film_genre"
            android:textColor="@color/saffron"
            android:textSize="@dimen/text_size_22dp"/>

        <TextView
            android:id="@+id/textFilmGradeInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:text="@string/text_film_grade"
            android:textColor="@color/saffron"
            android:textSize="@dimen/text_size_26dp"/>

        <TextView
            android:id="@+id/textFilmInfoActor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:text="@string/text_actors"
            android:textColor="@color/saffron"
            android:textSize="@dimen/text_size_26dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerListActor"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="15dp"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>