<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_purple">

    <LinearLayout
        android:id="@+id/caseActorInfo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="20dp"
        android:background="@color/russian_violet"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/textActorNameInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/text_actor_name"
            android:textColor="@color/saffron"
            android:textSize="@dimen/text_size_36dp" />


        <ImageView
            android:id="@+id/imageActorPhotoInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:background="@drawable/ic_account" />

        <TextView
            android:id="@+id/textActorBioInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginRight="25dp"
            android:layout_marginLeft="25dp"
            android:text="@string/text_actor_bio"
            android:textColor="@color/saffron"
            android:textSize="@dimen/text_size_22dp"/>

        <TextView
            android:id="@+id/textFilmsListInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:text="@string/text_films"
            android:textColor="@color/saffron"
            android:textSize="@dimen/text_size_26dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerListActorsFilms"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="15dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>